--- a/genetic_tac_toe/core/templates/interface.html
+++ b/genetic_tac_toe/core/templates/interface.html
@@ -48,19 +48,19 @@
 <!-- Top Row -->
 <div style="position:absolute; top:180px; left:130px;">
 <pre>
-{{o}}
+{{grid.top.left}}
 </pre>
 </div>
 
 <div style="position:absolute; top:180px; left:235px;">
 <pre>
-{{x}}
+{{grid.top.mid}}
 </pre>
 </div>
 
 <div style="position:absolute; top:180px; left:340px;">
 <pre>
-{{x}}
+{{grid.top.right}}
 </pre>
 </div>
 
@@ -68,19 +68,19 @@
 <!-- Middle Row  -->
 <div style="position:absolute; top:290px; left:130px;">
 <pre>
-{{x}}
+{{grid.mid.left}}
 </pre>
 </div>
 
 <div style="position:absolute; top:290px; left:235px;">
 <pre>
-{{o}}
+{{grid.mid.mid}}
 </pre>
 </div>
 
 <div style="position:absolute; top:290px; left:340px;">
 <pre>
-{{x}}
+{{grid.mid.right}}
 </pre>
 </div>
 
@@ -89,20 +89,20 @@
 <!-- Bottem Row  -->
 <div style="position:absolute; top:390px; left:130px;">
 <pre>
-{{x}}
+{{grid.bot.left}}
 </pre>
 </div>
 
 
 <div style="position:absolute; top:390px; left:235px;">
 <pre>
-{{x}}
+{{grid.bot.mid}}
 </pre>
 </div>
 
 <div style="position:absolute; top:390px; left:340px;">
 <pre>
-{{o}}
+{{grid.bot.right}}
 </pre>
 </div>
 
